# obzerver_ros

./: CMakeLists.txt  README.md  package.xml
config/: demo_eval.yaml  obzerver.yaml
launch/: decision_eval.launch  demo.launch  obzerver.launch
msg/: Init.msg  Track.msg  Tracks.msg  object.msg
src/: obzerver_node.cpp
