<?xml version="1.0"?>
<package>
  <name>obzerver_ros</name>
  <version>0.1.0</version>
  <description>ROS Interface to libobzerver</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>Apache 2</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/obzerver_ros</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
 
  <!-- obzerver -->
  <!--build_depend>obzerver</build_depend-->
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>libgsl</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <test_depend>gtest</test_depend>

  <!-- ros -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
