<?xml version="1.0"?>
<package>
  <name>obzerver_ros</name>
  <version>0.1.0</version>
  <description>ROS Interface to libobzerver</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <license>Apache 2</license>

  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <!-- obzerver -->
  <build_depend>git</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>
  <build_depend>libgsl</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <!-- ros -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>avi2ros</run_depend>

  <!-- test -->
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
